--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
     <link rel="icon" type="image/png" href="./public/img/favicon.ico">
     <title>Portafolio Cristian Alvarez</title>
+
+    <meta name="description" content="Soy desarrollador de software especializado en front-end. Manejo herramientas como HTML, CSS, JavaScript, React y PostgreSQL para crear aplicaciones web interactivas.">
+    <meta name="keywords" content="portafolio, desarrollador web, HTML, CSS, JavaScript, React, proyectos web, front-end, aplicaciones web, Programador">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Cristian David Alvarez Tigreros">
+
+
   </head>
   <body>
     <div id="root"></div>
